Fix layout issues by adjusting height properties and aligning logo area in dashboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body, html {
 .page { 
     margin: 0;
     font-size: 16px;
-    min-height: 100vh;
+    height: 100vh;
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -30,6 +30,8 @@ body, html {
     display: grid;
     grid-column: 1/2;
     grid-row: 1 / -1;
+    width: 100%;
+    height: 100%;
 }
 .dashboard button {
     background-color: transparent;
@@ -47,6 +49,7 @@ body, html {
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
     font-size: 16px;
 }
 .dashboard .logo-area img {
